[metadata]
name = buildout.environ
description = Expose system environment into buildout section
long_description = file: README.rst, CHANGES.rst, LICENSE.rst
keywords = Python Buildout Extension
author = Jens W. Klein
author_email = jk@kleinundpartner.at
url = https://pypi.python.org/pypi/buildout.environ
license = GNU General Public License v2 (GPLv2)
classifiers =
    Environment :: Web Environment
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7.
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)

[options]
include_package_data = True
install_requires =
    zc.buildout
    setuptools
namespace_packages =
    buildout
# thanks to this bug
# https://github.com/pypa/setuptools/issues/1136
# the following line w/o override in setup.py does not work.
package_dir =
    = src
packages = find:
zip_safe = False

[options.packages.find]
where =
    src

[options.entry_points]
zc.buildout.extension =
    default = buildout.environ.extension:install

[check-manifest]
ignore =
    *.cfg
    .coveragerc
    .editorconfig
    .gitattributes

[isort]
# for details see
# http://docs.plone.org/develop/styleguide/python.html#grouping-and-sorting
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 200
not_skip = __init__.py
